RESOLVED FIXED37494
REGRESSION (r57340): fast/events/mouse-drag-from-frame-to-other-frame.html fails on Windows
https://bugs.webkit.org/show_bug.cgi?id=37494
Summary REGRESSION (r57340): fast/events/mouse-drag-from-frame-to-other-frame.html fa...
Adam Roben (:aroben)
Reported 2010-04-13 00:00:34 PDT
Since r57340 <http://trac.webkit.org/changeset/57340>, fast/events/mouse-drag-from-frame-to-other-frame.html has been failing on Windows.
Attachments
Add Windows failing results for mouse-drag-from-frame-to-other-frame.html (1.25 KB, patch)
2010-04-13 21:40 PDT, Adam Roben (:aroben)
no flags
proposed fix (5.07 KB, patch)
2010-04-15 16:43 PDT, Alexey Proskuryakov
ggaren: review+
Adam Roben (:aroben)
Comment 1 2010-04-13 00:01:22 PDT
Alexey Proskuryakov
Comment 2 2010-04-13 00:25:30 PDT
Hmm. What about bug 29963? I don't see how r57340 could affect this.
Adam Roben (:aroben)
Comment 3 2010-04-13 00:36:18 PDT
(In reply to comment #2) > Hmm. What about bug 29963? That bug was fixed in r54400, and the expected failure result was removed in r54459. But now we're failing the test again. > I don't see how r57340 could affect this. Given that r48884 likely caused bug 29963, and r54400 fixed it, it seems this test is sensitive to some details of our implementation of event listeners. Since r57340 changes some of those details, I'm not that surprised that it could have caused this.
Adam Roben (:aroben)
Comment 4 2010-04-13 21:40:49 PDT
Created attachment 53312 [details] Add Windows failing results for mouse-drag-from-frame-to-other-frame.html
Eric Seidel (no email)
Comment 5 2010-04-13 22:38:18 PDT
Comment on attachment 53312 [details] Add Windows failing results for mouse-drag-from-frame-to-other-frame.html I assume you're going to leave this bug open.
Adam Roben (:aroben)
Comment 6 2010-04-13 22:38:55 PDT
(In reply to comment #5) > I assume you're going to leave this bug open. Yes, exactly. Thanks for the review!
Adam Roben (:aroben)
Comment 7 2010-04-13 23:25:22 PDT
Comment on attachment 53312 [details] Add Windows failing results for mouse-drag-from-frame-to-other-frame.html Committed r57563.
Alexey Proskuryakov
Comment 8 2010-04-15 16:40:12 PDT
The problem here is that after r57340, ScriptController for one of the frames is created later than it used to be. It's created during replaySavedEvents in DRT, which results in EventSender state being lost: JSObjectRef makeEventSender(JSContextRef context) { down = false; dragMode = true; replayingSavedEvents = false; ... We don't have such code on the Mac, because the state machine for replaySavedEvents is different there, and resetting wasn't needed. See <http://trac.webkit.org/changeset/29724> for the original fix that introduced resetting.
Alexey Proskuryakov
Comment 9 2010-04-15 16:43:31 PDT
Created attachment 53488 [details] proposed fix
Geoffrey Garen
Comment 10 2010-04-15 16:49:40 PDT
Comment on attachment 53488 [details] proposed fix r=me
Alexey Proskuryakov
Comment 11 2010-04-15 16:53:59 PDT
Note You need to log in before you can comment on or make changes to this bug.